--- a/aboutus.html
+++ b/aboutus.html
@@ -6,8 +6,6 @@
 
 
 
-
-
 .center{
     display:inline;
     margin-left:auto;
@@ -21,14 +19,13 @@
     font-family: Title Font;
     color:rgb(235, 175, 107);
 
-    font-size: 250px;
+    font-size: 200px;
 
 
     text-align: center;
 
     float: none;
 }
-
 
 
 
@@ -42,15 +39,18 @@
 
 <body>
   <center>
-    <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline;"></a>
-    <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline; "></a> 
-    <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline;"></a>
+    <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline"></a>
+    <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline"></a> 
+    <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
 
-
-<h1>SejDyes</h1></center>
-  <br>
+    <h1>SejDyes</h1>
+</center>
   
-   <center>  <p class="center" size="500"">[general paragraph about the entire business]</p></center>
+<br>
+  
+<center> 
+    <p class="center" size="500"">[general paragraph about the entire business]</p>
+</center>
   
 
 <br>
@@ -60,15 +60,15 @@
 <br>
 
     
-
-<center> <div style="display: inline;">
-    <h2 class="name">Shekinah</h2>
-    <br>
-     <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="750" class="center" border="10">
-     <br>
-     <p class="center">description, email me what you want put here</p>
-
- </div></center>
+<center> 
+    <div style="display: inline;">
+        <h2 class="name">Shekinah</h2>
+        <br>
+         <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="750" class="center" border="10">
+         <br>
+         <p class="center">description, email me what you want put here</p>
+    </div>
+</center>
    
  <br>
 <br>
