--- a/store.html
+++ b/store.html
@@ -13,10 +13,11 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto auto auto auto;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
   grid-gap: 50px;
   align-content: center;
+  
 }
 
 .item1{
@@ -27,26 +28,31 @@
 .item2{
   grid-column: 2;
   grid-row: 1;
+   
 }
 
 .item3{
   grid-column: 1;
   grid-row: 2;
+   
 }
 
 .item4{
   grid-column: 2;
   grid-row: 2;
+   
 }
 
 .item5{
   grid-column: 1;
   grid-row: 3;
+   
 }
 
 .item6{
   grid-column: 2;
   grid-row: 3;
+   
 }
 
 
