--- a/aboutus.html
+++ b/aboutus.html
@@ -64,7 +64,7 @@
     <div style="display: inline;">
         <h2 class="name">Shekinah</h2>
         <br>
-         <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="750" class="center" border="10">
+         <img src="ADD SOURCE.png" alt="Shekinah" width="5vw" height="5vw" class="center" border="10">
          <br>
          <p class="center">description, email me what you want put here</p>
     </div>
