--- a/aboutus.html
+++ b/aboutus.html
@@ -25,6 +25,7 @@
     text-align: center;
 
     float: none;
+
 }
 
 
@@ -94,7 +95,7 @@
     <center> <div style="display: inline; text-align: center;">
         <h2   class="name">Jojo</h2>
           <br>
-             <img src="/jojo.png" alt="Jojo" width="750" height="750" class="center" border="10">
+             <img src="/jojo.png" alt="Jojo" width="5vw" height="auto" class="center" border="10">
              <br>
              <p class="center">description, email me what you want put here</p>
      
