--- a/aboutus.html
+++ b/aboutus.html
@@ -7,10 +7,13 @@
 
 
 .center{
-    display:inline;
+    display:block;
     margin-left:auto;
     margin-right: auto;
     text-align: center;
+
+    width: 25vw;
+    height: auto;
 }
 
 .name{
@@ -25,6 +28,8 @@
     text-align: center;
 
     float: none;
+
+    
 
 }
 
