--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
     <div style="display: inline;">
         <h2 class="name">Shekinah</h2>
         <br>
-         <img src="ADD SOURCE.png" alt="Shekinah" width="5vw" height="5vw" class="center" border="10">
+         <img src="https://assets.learnosity.com/organisations/447/eeacdeb6-90a4-400a-b74b-ba8fda536658.png" alt="Shekinah" width="5vw" height="5vw" class="center" border="10">
          <br>
          <p class="center">description, email me what you want put here</p>
     </div>
@@ -85,7 +85,7 @@
     <center> <div style="display: inline; text-align: center;">
        <h2   class="name">Emma</h2>
        <br>
-        <img src="ADD SOURCE.png" alt="Emma" width="750" height="750" class="center" border="10">
+        <img src="https://assets.learnosity.com/organisations/447/eeacdeb6-90a4-400a-b74b-ba8fda536658.png" alt="Emma" width="750" height="750" class="center" border="10">
         <br>
         <p class="center">description, email me what you want put here</p>
 
