--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html = "UTF-8">
+<!DOCTYPE html> 
 <html>
 <head>
-<title>V2 SejDyes: Handcrafted Tie-Dyes</title>
+<title>SejDyes: Handcrafted Tie-Dyes</title>
 
 
 	
