--- a/store.html
+++ b/store.html
@@ -80,7 +80,7 @@
 
            <div class="item1">
             <h3>Product 1</h3>
-            <a href = "EXAMPLE.HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" ></a>
+            <a href = "product1.html"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" ></a>
 
 
            <h4>Product 1 Price</h4>
