--- a/product1.html
+++ b/product1.html
@@ -9,8 +9,13 @@
 
 h1{
     display: block;
-    font-size: 10vw;
+    font-size: 15vw;
     text-align: center;
+}
+
+img{
+    width: 15vw;
+    height: auto;
 }
 
 
@@ -18,7 +23,7 @@ h1{
 </head>
 <body>
 
-    <center>
+<center>
 <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline"></a>
 <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline"></a> 
 <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
@@ -26,7 +31,11 @@ h1{
 
 
 
+
+
 <h1>Blue Tie-Dye Shirt</h1>
+
+<img src="/placeholder.png" alt="image">
 
 
 
