--- a/product1.html
+++ b/product1.html
@@ -16,6 +16,10 @@ h1{
 img{
     width: 50vw;
     height: auto;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
     
 }
 
