--- a/product1.html
+++ b/product1.html
@@ -13,7 +13,7 @@ h1{
     text-align: center;
 }
 
-img{
+.product{
     width: 50vw;
     height: auto;
     margin-left: 5vw;
@@ -40,7 +40,7 @@ img{
 
 <h1>Blue Tie-Dye Shirt</h1>
 
-<img src="/placeholder.png" alt="image">
+<img src="/placeholder.png" alt="image" class="product">
 
 
 
