--- a/product1.html
+++ b/product1.html
@@ -14,6 +14,7 @@ h1{
 }
 
 .product{
+    display: inline-block;
     width: 50vw;
     height: auto;
     margin-left: 5vw;
@@ -22,6 +23,8 @@ h1{
     margin-bottom: 5vw;
     
 }
+
+
 
 
 </style>
@@ -40,8 +43,8 @@ h1{
 
 <h1>Blue Tie-Dye Shirt</h1>
 
-<img src="/placeholder.png" alt="image" class="product">
-<p>hai</p>
+<img src="/placeholder.png" alt="image" class="product" style="float: left;">
+<p style="float: left;">hai</p>
 
 
 
