--- a/product1.html
+++ b/product1.html
@@ -24,6 +24,11 @@ h1{
     
 }
 
+.price{
+    float:left;
+    font-size: 5vw;
+}
+
 
 
 
@@ -37,14 +42,15 @@ h1{
 <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
 </center>
 
-
+<p> the following is a work in progress, and are all examples</p>
 
 
 
 <h1>Blue Tie-Dye Shirt</h1>
 
 <img src="/placeholder.png" alt="image" class="product" style="float: left;">
-<p style="float: left;">hai</p>
+<p class="price"">19.00 AUD</p>
+
 
 
 
