--- a/product1.html
+++ b/product1.html
@@ -24,10 +24,17 @@ h1{
     
 }
 
+.name{
+    float:left;
+    font-weight: 10vw;
+
+}
+
 .price{
     float:left;
     font-size: 5vw;
 }
+
 
 
 
@@ -49,7 +56,7 @@ h1{
 <h1>Blue Tie-Dye Shirt</h1>
 
 <img src="/placeholder.png" alt="image" class="product" style="float: left;">
-<h3>Blue Tie-Dye Shirt</h2>
+<h3 class="name" >Blue Tie-Dye Shirt</h2>
 <p class="price"">19.00 AUD</p>
 
 
