--- a/product1.html
+++ b/product1.html
@@ -19,7 +19,7 @@ h1{
     height: auto;
     margin-left: 5vw;
     margin-right: 5vw;
-    margin-top: 5vw;
+    margin-top: 0px;
     margin-bottom: 5vw;
     
 }
@@ -56,8 +56,7 @@ h1{
 <h1>Blue Tie-Dye Shirt</h1>
 
 <img src="/placeholder.png" alt="image" class="product" style="float: left;">
-<h3 class="name" >Blue Tie-Dye Shirt</h2>
-<p class="price"">19.00 AUD</p>
+<h3 class="name" >Blue Tie-Dye Shirt</h2><p class="price"">19.00 AUD</p>
 
 
 
