--- a/product1.html
+++ b/product1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-<title>Blue Tie-Dye Shirt by SejDyes</title>
+<title>1 Blue Tie-Dye Shirt by SejDyes</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <style>
@@ -27,12 +27,13 @@ h1{
 .name{
     float:left;
     font-weight: 10vw;
-
+    margin-bottom: -5vw;
 }
 
 .price{
     float:left;
     font-size: 5vw;
+    margin-top: -5vw;
 }
 
 
@@ -56,7 +57,8 @@ h1{
 <h1>Blue Tie-Dye Shirt</h1>
 
 <img src="/placeholder.png" alt="image" class="product" style="float: left;">
-<h3 class="name" >Blue Tie-Dye Shirt</h2><p class="price"">19.00 AUD</p>
+<h3 class="name" >Blue Tie-Dye Shirt
+    <p class="price"">19.00 AUD
 
 
 
