--- a/product1.html
+++ b/product1.html
@@ -56,7 +56,7 @@ h1{
 
 <img src="/placeholder.png" alt="image" class="product" style="float: left;">
 
-<!--These fol-->
+<!--These following elements don't have ending tags, but this fixes a bug in formatting.-->
 
 <h3 class="name">Blue Tie-Dye Shirt
 <p class="price"">19.00 AUD
