--- a/product1.html
+++ b/product1.html
@@ -58,8 +58,8 @@ h1{
 
 <!--These following elements don't have ending tags, but this fixes a bug in formatting.-->
 
-<h3 class="name">Blue Tie-Dye Shirt
-<p class="price"">19.00 AUD
+<h3 class="name">Blue Tie-Dye Shirt</h3>
+<p class="price"">19.00 AUD</p>
 
 
 
