--- a/product1.html
+++ b/product1.html
@@ -34,6 +34,13 @@ h1{
     font-size: 5vw;
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 
 
 
@@ -56,9 +63,10 @@ h1{
 
 <img src="/placeholder.png" alt="image" class="product" style="float: left;">
 
-
+<div class="container">
 <h3 class="name">Blue Tie-Dye Shirt</h3>
 <p class="price"">19.00 AUD</p>
+</div>
 
 
 
