--- a/product1.html
+++ b/product1.html
@@ -34,13 +34,25 @@ h1{
     font-size: 5vw;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
+.grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+  grid-gap: 50px;
+  align-content: center;
+  
 }
 
+.item1{
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.item2{
+  grid-column: 1;
+  grid-row: 2;
+   
+}
 
 
 
@@ -63,9 +75,9 @@ h1{
 
 <img src="/placeholder.png" alt="image" class="product" style="float: left;">
 
-<div class="container">
-<h3 class="name">Blue Tie-Dye Shirt</h3>
-<p class="price"">19.00 AUD</p>
+<div class="grid-container">
+<h3 class="name item1">Blue Tie-Dye Shirt</h3>
+<p class="price item2">19.00 AUD</p>
 </div>
 
 
