--- a/product1.html
+++ b/product1.html
@@ -46,11 +46,13 @@ h1{
 .item1{
   grid-column: 1;
   grid-row: 1;
+  background-color: aqua;
 }
 
 .item2{
   grid-column: 1;
   grid-row: 2;
+  background-color:red;
    
 }
 
