--- a/product1.html
+++ b/product1.html
@@ -25,20 +25,22 @@ h1{
 }
 
 .name{
-    float:left;
-    font-weight: 10vw;
+    display: inline;
+    font-size: 10vw;
 }
 
 .price{
-    float:left;
+    display: inline;
     font-size: 5vw;
 }
 
 .grid-container {
+    width: 50vw;
+    height: auto;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto;
-  grid-gap: 50px;
+  grid-gap: 0px;
   align-content: center;
   background-color: peru;
   
