--- a/product1.html
+++ b/product1.html
@@ -14,7 +14,6 @@ h1{
 }
 
 .product{
-    display: inline-block;
     width: 50vw;
     height: auto;
     margin-left: 5vw;
@@ -46,16 +45,23 @@ h1{
 }
 
 .item1{
-  grid-column: 1;
+  grid-column: 2;
   grid-row: 1;
   background-color: aqua;
 }
 
 .item2{
-  grid-column: 1;
+  grid-column: 2;
   grid-row: 2;
   background-color:red;
    
+}
+
+.item3{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column: 1;
+    
 }
 
 
@@ -77,7 +83,7 @@ h1{
 
 <h1>Blue Tie-Dye Shirt</h1>
 
-<img src="/placeholder.png" alt="image" class="product" style="float: left;">
+<img src="/placeholder.png" alt="image" class="item3 product" style="float: left;">
 
 <div class="grid-container">
 
