--- a/product1.html
+++ b/product1.html
@@ -83,9 +83,11 @@ h1{
 
 <h1>Blue Tie-Dye Shirt</h1>
 
+<div class="grid-container"></div>
+
 <img src="/placeholder.png" alt="image" class="item3 product" style="float: left;">
 
-<div class="grid-container">
+
 
 <h3 class="name item1">Blue Tie-Dye Shirt</h3>
 <p class="price item2">19.00 AUD</p>
