--- a/product1.html
+++ b/product1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-<title>2 Blue Tie-Dye Shirt by SejDyes</title>
+<title>3 Blue Tie-Dye Shirt by SejDyes</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <style>
@@ -32,11 +32,8 @@ h1{
 }
 
 .grid-container {
-    float: left;
-    width: 40vw;
-    height: auto;
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: auto auto;
   grid-template-rows: auto auto;
   grid-gap: 0px;
   align-content: center;
@@ -85,12 +82,11 @@ h1{
 
 <div class="grid-container"></div>
 
-<img src="/placeholder.png" alt="image" class="item3 product" style="float: left;">
 
 
-
-<h3 class="name item1">Blue Tie-Dye Shirt</h3>
-<p class="price item2">19.00 AUD</p>
+<h3 class="item1">Blue Tie-Dye Shirt</h3>
+<p class="item2">19.00 AUD</p>
+<img src="/placeholder.png" alt="image" class="item3" style="float: left;">
 
 </div>
 
