--- a/product1.html
+++ b/product1.html
@@ -52,8 +52,8 @@ h1{
 
 .item2{
     grid-column: 2;
-  grid-row: 1;
-background-color:blueviolet;
+    grid-row: 1;
+    background-color:blueviolet;
 }
 
 .item3{
@@ -85,10 +85,17 @@ background-color:blueviolet;
 
 <div class="grid-container"></div>
 
+    <div class="item1">
+    <img src="/placeholder.png" alt="image">
+    </div>
 
-<img src="/placeholder.png" alt="image" class="item1">
-<h3 class="item2">Blue Tie-Dye Shirt</h3>
-<p class="item3">19.00 AUD</p>
+    <div class="item2">
+    <h3>Blue Tie-Dye Shirt</h3>
+    </div>      
+
+    <div class="item3">
+    <p>19.00 AUD</p>
+    </div>
 
 
 </div>
