--- a/product1.html
+++ b/product1.html
@@ -33,8 +33,8 @@ h1{
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto auto;
   grid-gap: 0px;
   align-content: center;
   background-color: peru;
