--- a/product1.html
+++ b/product1.html
@@ -7,40 +7,63 @@
 
 <style>
 
+h1{
+    display: block;
+    font-size: 15vw;
+    text-align: center;
+}
 
+.product{
+    width: 50vw;
+    height: auto;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-top: 0px;
+    margin-bottom: 5vw;
+    
+}
+
+.name{
+    font-size: 10vw;
+}
+
+.price{
+    font-size: 5vw;
+}
 
 .grid-container {
-    display: grid;
-  grid-template-columns: auto auto;
+  display: grid;
+  grid-template-columns: auto  auto ;
   grid-template-rows: auto auto;
-  grid-gap: 50px;
+  grid-gap: 0px;
   align-content: center;
-  
+  background-color: peru;
   
 }
 
 .item1{
-  grid-column: 1;
-  grid-row: 1;
+    grid-column: 1;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+ 
+    background-color: aqua;
 }
 
 .item2{
-  grid-column: 2;
-  grid-row: 1;
-   
+    grid-column: 2;
+    grid-row: 1;
+    background-color:blueviolet;
 }
 
 .item3{
-  grid-column: 1;
+ 
+    grid-column: 2;
   grid-row: 2;
-   
+  background-color:red;
+    
 }
 
-.item4{
-  grid-column: 2;
-  grid-row: 2;
-   
-}
 
 
 
@@ -63,27 +86,16 @@
 <div class="grid-container">
 
     <div class="item1">
-        <img src="/placeholder.png" alt="image">
-   </div>
-
-   <div class="item2">
-    <h3>Blue Tie-Dye Shirt</h3>
-
-   </div>
-
-<div>
-    <p>19.00 AUD</p>
-   </div>
-
-
      <!--<img src="/placeholder.png" alt="image">-->
+    </div>
 
-
-
+    <div class="item2">
     <!--<h3>Blue Tie-Dye Shirt</h3>-->
+    </div>      
 
+    <div class="item3">
     <!--<p>19.00 AUD</p>-->
- 
+    </div>
 
 
 </div>
