--- a/product1.html
+++ b/product1.html
@@ -86,15 +86,15 @@ h1{
 <div class="grid-container">
 
     <div class="item1">
-     <!--<img src="/placeholder.png" alt="image">-->
+     <img src="/placeholder.png" alt="image>
     </div>
 
     <div class="item2">
-    <!--<h3>Blue Tie-Dye Shirt</h3>-->
+    <h3>Blue Tie-Dye Shirt</h3>
     </div>      
 
     <div class="item3">
-    <!--<p>19.00 AUD</p>-->
+    <p>19.00 AUD</p>
     </div>
 
 
