--- a/product1.html
+++ b/product1.html
@@ -16,11 +16,6 @@ h1{
 .product{
     width: 50vw;
     height: auto;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    margin-top: 0px;
-    margin-bottom: 5vw;
-    
 }
 
 .name{
@@ -43,8 +38,7 @@ h1{
 
 .item1{
     grid-column: 1;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row: 1;
 
  
     background-color: aqua;
@@ -86,15 +80,15 @@ h1{
 <div class="grid-container">
 
     <div class="item1">
-     <img src="/placeholder.png" alt="image>
+     <img src="/placeholder.png" alt="image" class="product">
     </div>
 
     <div class="item2">
-    <h3>Blue Tie-Dye Shirt</h3>
+    <h3 class="name">Blue Tie-Dye Shirt</h3>
     </div>      
 
     <div class="item3">
-    <p>19.00 AUD</p>
+    <p class="price">19.00 AUD</p>
     </div>
 
 
