--- a/product1.html
+++ b/product1.html
@@ -37,23 +37,25 @@ h1{
 }
 
 .item1{
+    grid-row: 1 2;
     grid-column: 1;
-    grid-row: 1;
+
 
  
     background-color: aqua;
 }
 
 .item2{
-    grid-column: 2;
     grid-row: 1;
+    grid-column: 2;
+
     background-color:blueviolet;
 }
 
 .item3{
- 
+    grid-row: 2;
     grid-column: 2;
-  grid-row: 2;
+
   background-color:red;
     
 }
