--- a/product1.html
+++ b/product1.html
@@ -19,7 +19,7 @@ h1{
 }
 
 .name{
-    font-size: 10vw;
+    font-size: 5vw;
 }
 
 .price{
@@ -29,7 +29,7 @@ h1{
 .grid-container {
   display: grid;
   grid-template-columns: auto  auto ;
-  grid-template-rows: auto auto;
+  grid-template-rows: 30vw 30vw;
   grid-gap: 0px;
   align-content: center;
   background-color: peru;
@@ -49,12 +49,16 @@ h1{
     grid-row: 1;
     grid-column: 2;
 
+    justify-content: start;
+
     background-color:blueviolet;
 }
 
 .item3{
     grid-row: 2;
     grid-column: 2;
+
+    justify-content: start;
 
   background-color:red;
     
