--- a/product1.html
+++ b/product1.html
@@ -29,7 +29,7 @@ h1{
 .grid-container {
   display: grid;
   grid-template-columns: auto  auto ;
-  grid-template-rows: 30vw 30vw;
+  grid-template-rows: 5vw 5vw 5vw 5vw 5vw 5vw;
   grid-gap: 0px;
   align-content: center;
   background-color: peru;
@@ -37,7 +37,7 @@ h1{
 }
 
 .item1{
-    grid-row: 1 / span 2;
+    grid-row: 1 / span 6;
     grid-column: 1;
 
 
