--- a/product1.html
+++ b/product1.html
@@ -51,10 +51,12 @@ h1{
 }
 
 .item2{
+
+    
     grid-row: 1;
     grid-column: 2;
 
-    justify-content: center;
+    align-items: center;
 
     background-color:blueviolet;
 }
@@ -63,7 +65,7 @@ h1{
     grid-row: 2;
     grid-column: 2;
 
-    justify-content: center;
+    align-items: center;
 
 
   background-color:red;
@@ -96,11 +98,11 @@ h1{
     </div>
 
     <div class="item2">
-    <h3 class="name">Blue Tie-Dye Shirt</h3>
+    <h3 class="name" style="align-self: center;">Blue Tie-Dye Shirt</h3>
     </div>      
 
     <div class="item3">
-    <p class="price">19.00 AUD</p>
+    <p class="price" style="align-self:center;">19.00 AUD</p>
     </div>
 
 
