--- a/product1.html
+++ b/product1.html
@@ -29,10 +29,10 @@ h1{
 .grid-container {
   display: grid;
   grid-template-columns: auto  auto ;
-  grid-template-rows: 15vw 15vw 15vw 15vw 15vw 15vw;
+  grid-template-rows: 15vw 15vw 15vw 15vw ;
   grid-gap: 0px;
   align-content: center;
-  background-color: peru;
+
   
 }
 
@@ -47,8 +47,7 @@ h1{
 
 
  
-    background-color: aqua;
-}
+=}
 
 .item2{
 
@@ -58,7 +57,7 @@ h1{
 
     align-items: center;
 
-    background-color:blueviolet;
+
 }
 
 .item3{
@@ -68,7 +67,7 @@ h1{
     align-items: center;
 
 
-  background-color:red;
+
     
 }
 
