--- a/product1.html
+++ b/product1.html
@@ -72,6 +72,13 @@ h1{
     
 }
 
+.item4{
+    grid-row:3;
+    grid-column: 2;
+
+    align-items: center;
+}
+
 grid-container{
 display: grid;
   grid-template-columns: 1fr 1fr;
@@ -102,9 +109,6 @@ grid-item{
 
 
 
-<h1>Blue Tie-Dye Shirt</h1>
-
-
 <grid-container>
 
 
@@ -117,10 +121,16 @@ grid-item{
     </div>      
 
     <div class="item3"style="justify-self: center; align-self:center;">
-    <p class="price" style="align-self:center;">19.00 AUD</p>
+    <p class="price" style="align-self:center;">19.99 AUD</p>
+    </div>
+
+    <div class="item4" style="justify-self: center; align-self:center;">
+    <img src="/placeholder.png" alt="image" style="width: 25vw; height: auto;">
     </div>
 
 </grid-container>
+
+
 
 
 </div>
