--- a/product1.html
+++ b/product1.html
@@ -44,10 +44,6 @@ h1{
 
     
 
-
-
- 
-
 }
 
 .item2{
@@ -106,7 +102,15 @@ grid-item{
 </center>
 
 
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 <grid-container>
@@ -125,7 +129,7 @@ grid-item{
     </div>
 
     <div class="item4" style="justify-self: center; align-self:center;">
-    <img src="/placeholder.png" alt="image" style="width: 25vw; height: auto;">
+    <img src="/placeholder.png" alt="image" style="width: 25vw; height: 10vw;">
     </div>
 
 </grid-container>
