--- a/product1.html
+++ b/product1.html
@@ -69,7 +69,7 @@ h1{
 }
 
 .item4{
-    grid-row:6;
+    grid-row:4;
     grid-column: 2;
 
     align-items: center;
@@ -133,6 +133,12 @@ grid-item{
     </div>
 
 </grid-container>
+
+<br>
+<br>
+<br>
+
+<p>test</p>
 
 
 
