--- a/product1.html
+++ b/product1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-<title>3 Blue Tie-Dye Shirt by SejDyes</title>
+<title>Blue Tie-Dye Shirt by SejDyes</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <style>
