--- a/product1.html
+++ b/product1.html
@@ -137,6 +137,11 @@ grid-item{
 <br>
 
 <p>Product Description</p>
+<p>Product Description</p>
+<p>Product Description</p>
+<p>Product Description</p>
+<p>Product Description</p>
+
 
 
 
