--- a/product1.html
+++ b/product1.html
@@ -139,12 +139,18 @@ grid-item{
 <br>
 <br>
 
-<p>Product Description</p>
-<p>Product Description</p>
-<p>Product Description</p>
-<p>Product Description</p>
-<p>Product Description</p>
-
+<center>
+<p style="display: inline;">Product Description</p>
+<br>
+<p style="display: inline;">Product Description</p>
+<br>
+<p style="display: inline;">Product Description</p>
+<br>
+<p style="display: inline;">Product Description</p>
+<br>
+<p style="display: inline;">Product Description</p>
+<br>
+</center>
 
 
 
